Added SVG to bottom

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <link type="text/css" href="./css/fonts/fonts.css" rel="stylesheet">
     <link type="text/css" href="./css/styles.css" rel="stylesheet">
     <link type="text/css" href='./css/assets/aos.css' rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
 </head>
 
 <body>
@@ -22,9 +19,12 @@
     </header>
     <div class="overview">
         <h1><a id="overview" data-aos="fade-left">Hey, I'm Jonah. Nice to meet you!</a></h1>
-        <p></p>
+        <p data-aos="fade-right">I'm a full stack developer from Leeds. I have been coding for 4 years but I am only 13 years old.</p>
     </div>
-
+    <svg width="1440" height="200" viewBox="0 0 1440 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M720 200L0 0.000244141V200H720Z" fill="#222831" />
+        <path d="M720 200L1440 0V200H720Z" fill="#222831" />
+    </svg>
     <script src="./js/assets/aos.js"></script>
     <script src='./js/index.js'></script>
 </body>
