Let's make something
Added that

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a id="overview">
         <div class="overview">
             <h1 data-aos="zoom-in-down">Hey, I'm Jonah. Nice to meet you!</h1>
-            <p data-aos="flip-up">I'm a full stack developer from Leeds. I have been coding for 4 years but I am only 13 years old.</p>
+            <p data-aos="flip-up">I'm a full stack developer from Leeds. I have been coding for 4 years but I am only 13 years old. </br></br><a href="#contact"><span class="dark-highlight">Let's make something!</span></a></p>
         </div>
     </a>
     <div class="grid-container">
