Sorted lower svg width

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>Web Development is what I have found I enjoy the most, but that doesn't mean I can't do anything else! I have worked on Game Development, SysAdmin and many other areas!</p>
     </div>
 </div>
-<svg width="1440" height="200" viewBox="0 0 1440 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="100%" height="200" viewBox="0 0 1440 200" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M720 200L0 0.000244141V200H720Z" fill="#222831" />
     <path d="M720 200L1440 0V200H720Z" fill="#222831" />
 </svg>
