Updated submitted page

--- a/submitted.html
+++ b/submitted.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Message Submitted!</title>
-	<style>
-		h1 {
-			text-align: center;
-			padding-top: 290px;
-			font-family: 'Verdana';
-		}
-	</style>
+    <title>Message Submitted!</title>
+    <style>
+    div {
+        text-align: center;
+        padding-top: 290px;
+        font-family: 'Verdana';
+    }
+    </style>
 </head>
+
 <body>
-<h1>Message has been sent! 🎉</h1>
+    <div>
+        <h1>Message has been sent! 🎉</h1>
+        <a href="https://jonahcrowlinson.github.io">Go back</a>
+    </div>
 </body>
+
 </html>
