--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Jonah Rowlinson | Full Stack Developer</title>
     <link type="text/css" href="./css/fonts/fonts.css" rel="stylesheet">
     <link type="text/css" href="./css/styles.css" rel="stylesheet">
@@ -72,8 +73,8 @@
             <path d="M720 200L1440 0V200H720Z" fill="#222831" />
         </svg>
 
-        <form method="POST" action="http://192.168.1.74:8000/contact">
-            <input type="text" name="name" placeholder="Full Name">
+        <form method="POST" action="http://192.168.1.74:8000/contact" class="input">
+            <input class="form-control" type="text" name="name" placeholder="Full Name">
             <input type="email" name="email" placeholder="Email">
             <input type="text" name="message" placeholder="Message">
 
