--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a id="overview">
         <div class="overview">
             <h1 data-aos="zoom-in-down">Hey, I'm Jonah. Nice to meet you!</h1>
-            <p data-aos="flip-up">I'm a full stack developer from Leeds. I have been coding for rougly 6 years!</br></br><a href="#contact"><span class="dark-highlight">Let's make something!</span></a></p>
+            <p data-aos="flip-up">I'm a full stack developer from Leeds. I have been coding for roughly 6 years!</br></br><a href="#contact"><span class="dark-highlight">Let's make something!</span></a></p>
         </div>
     </a>
     <div class="grid-container">
